data/test/type_check/pass/issue_4.v
if (1) begin
  reg r;
end
reg s;
initial $finish;
