data/test/type_check/fail/generate_3.v
wire x = 0;
genvar i;

for (i=0;i<x;i=i+1) begin
  initial $display(i);
end
